<resources>
    <string name="app_name">IDiabetic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_log_entry">LogEntryActivity</string>

<!--Login Activity strings-->
    <string name="login_btn_text">Login</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">E-mail</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="register_question">\Don\'t have an account?\</string>
    <string name="register">Register!</string>
</resources>